change domain name to ai-keys

--- a/forget.html
+++ b/forget.html
@@ -7,7 +7,7 @@
 	<meta content="yes" name="apple-mobile-web-app-capable">
 	<meta content="black" name="apple-mobile-web-app-status-bar-style">
 	<meta content="telephone=no" name="format-detection">
-	<link rel="shortcut icon" href="./img/broadlink.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="./img/ai-keys.ico" type="image/x-icon" />
 
 	<!-- pack:css -->
 	<link rel="stylesheet" href="./app.css?v=0731">
