--- a/login.html
+++ b/login.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Link your Broadlink Intelligent Home Center account</title>
+	<title>Link your Ai-keys account</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<meta content="yes" name="apple-mobile-web-app-capable">
 	<meta content="black" name="apple-mobile-web-app-status-bar-style">
 	<meta content="telephone=no" name="format-detection">
-	<link rel="shortcut icon" href="./img/broadlink.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="./img/ai-kes.ico" type="image/x-icon" />
 
 	<!-- pack:css -->
 	<link rel="stylesheet" href="./app.css?v=0803">
@@ -57,7 +57,7 @@
 				<img src="./img/logo.png" class="logoImg">
 			</div>
 			<div class="tips">
-				<p class="tip">Enter the phone number or email address and password created in your Broadlink Intelligent Home Center account. For any account help, please see FAQ below.</p>
+				<p class="tip">Enter the phone number or email address and password created in your Ai-keys account. For any account help, please see FAQ below.</p>
 				<!-- <p class="tip">Don't have one? <a class="download">Get the App</a> and sign up an account.</p> -->
 			</div>
 			<div class="loginBox">
@@ -87,7 +87,7 @@
 				<a id="logFacebook" href="javascript:void(0)"><span class="face"></span>Log  in  with  Facebook</a>
 			</div>
 		</form>
-		<div class="footer"><a class="ftext" href="./faq.html">FAQ</a><a class="ftext" href="./support">Support</a><a class="ftext" href="https://privacypolicy.ibroadlink.com/privacypolicy/index.html">Privacy</a></div>
+		<div class="footer"><a class="ftext" href="./faq.html">FAQ</a><a class="ftext" href="./support">Support</a><a class="ftext" href="https://privacypolicy.ai-keys.com/index.html">Privacy</a></div>
 	</div>
 
 
