--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Link your Broadlink Intelligent Home Center account</title>
+	<title>Link your AI-keys account</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<meta content="yes" name="apple-mobile-web-app-capable">
 	<meta content="black" name="apple-mobile-web-app-status-bar-style">
 	<meta content="telephone=no" name="format-detection">
-	<link rel="shortcut icon" href="./img/broadlink.ico" type="image/x-icon" />
+	<link rel="shortcut icon" href="./img/ai-keys.ico" type="image/x-icon" />
 	<link rel="stylesheet" href="./app.css?v=1221">
 </head>
 <body>
@@ -27,18 +27,18 @@
 			<div class="loginBox">
 				<p class="head">Please make sure:</p>
 				<div class="para">
-					1. You have installed BroadLink Intelligent Home Center  (ihc) App and signed up a BroadLink account. 
+					1. You have installed Ai-keys App and signed up a Ai-keys account. 
 				</div>
 				<div class="desc">Don’t have an account? <a class="download">Get the APP</a> and sign up.</div>
 				<div class="para">2. You have finished setup of device.</div>
 				<div class="desc alexa"><a href="./support/prepare.html">Find tutorials</a></div>
-				<div class="para">3. You have added your TV or STB in ihc App and all the buttons are tested functional properly.</div>
+				<div class="para">3. You have added your smart devices in Ai-keys App and all the buttons are tested functional properly.</div>
 				<div class="desc alexa"><a href="./support/tv.html ">Watch the video</a></div>
 			</div>
 			<div class="check"><label id="confirm"><span  class="radio" id="radio"></span>Confirmed</label></div>
 			<button type="button" class="loginBtn" id="next" disabled>Next</button>
 		</form>
-		<div class="footer"><a class="ftext" href="./faq.html">FAQ</a><a class="ftext" href="./support">Support</a><a class="ftext" href="https://privacypolicy.ibroadlink.com/privacypolicy/index.html">Privacy</a></div>
+		<div class="footer"><a class="ftext" href="./faq.html">FAQ</a><a class="ftext" href="./support">Support</a><a class="ftext" href="https://privacypolicy.ai-keys.com/index.html">Privacy</a></div>
 	</div>
 
 
